<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/active_home"
            android:title="@string/action_home"
            android:icon="@drawable/home_24px"/>
        <item
            android:id="@+id/active_favorite"
            android:title="@string/action_Favorite"
            android:icon="@drawable/favorite_24px"/>
        <item
            android:id="@+id/active_author"
            android:title="@string/action_my_page"
            android:icon="@drawable/web_24px" />
    </group>
    <item android:id="@+id/nav_account"
        android:title="@string/grp_account">
        <menu>
            <item
                android:id="@+id/my_profile"
                android:title="@string/my_profile"
                android:icon="@drawable/web_24px" />
            <item
                android:id="@+id/change_password"
                android:title="@string/change_password"
                android:icon="@drawable/web_24px" />
        </menu>
    </item>
</menu>